# ocr

./: .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  README.md  app_runner.py  poetry-run.py  pyproject.toml  run.sh  run_terminal.sh
input_data/: metadata.xml  mets.xml
src/ocr_app/: __init__.py  app.py  download_model.py  image_processor.py  logger.py  model_loader.py
